Re: #1107 fix for whitespace in menus on IE

--- a/source/sass/scss/objects/navigation/_nav-top-accessible.scss
+++ b/source/sass/scss/objects/navigation/_nav-top-accessible.scss
@@ -175,6 +175,7 @@
 
     li{
       float: none;
+      display: inline;
     }
 
     a{
